--- a/accountingApp/templates/home.html
+++ b/accountingApp/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {{ msg }}
     <a href="{% url 'capital' %}">Create Capital</a>
+    <a href="{% url 'accounting_book' %}">Create Accounting Book</a>
     <p>Your capital: {{ user.capital.amount }}</p>
 
 
